--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@
         </div>
         <div class="homeouter">
             <div class="homepic">
-                <img src="pictures/doneela2.jpg" alt="">
+                <img src="doneela2.jpg" alt="">
             </div>
         </div>
         <a class="mouse_scroll" href="#about">
@@ -74,7 +74,7 @@
         </div>
         <div class="mypic ">
             <div class="details ">
-                <figure><img src="pictures/Doneela.jpeg " alt=" ">
+                <figure><img src="Doneela.jpeg " alt=" ">
                     <div class="social-icons ">
                         <a href="https://www.linkedin.com/in/doneela-das-651236204/ " target="blank ">
                             <svg class="icon linkdin " viewBox="0 0 32 32 " fill="none " xmlns="http://www.w3.org/2000/svg ">
@@ -182,7 +182,7 @@
         <div class="projects">
             <div class="project 1">
                 <div class="projectpic 1">
-                    <img src="pictures/pic1.jpeg " alt="">
+                    <img src="pic1.jpeg " alt="">
                 </div>
                 <div class="projectdetails 1">
                     <div class="projectheadline">Animated Globe</div>
@@ -217,12 +217,12 @@
 
                 </div>
                 <div class="projectpic 2">
-                    <img src="pictures/pic2.jpeg " alt="">
+                    <img src="pic2.jpeg " alt="">
                 </div>
             </div>
             <div class="project 3">
                 <div class="projectpic 3">
-                    <img src="pictures/pic3.jpeg " alt="">
+                    <img src="pic3.jpeg " alt="">
                 </div>
                 <div class="projectdetails 3">
                     <div class="projectheadline">E-Cell Website</div>
@@ -254,7 +254,7 @@
                     </a>
                 </div>
                 <div class="projectpic 4">
-                    <img src="pictures/pic4.jpeg " alt="">
+                    <img src="pic4.jpeg " alt="">
                 </div>
             </div>
         </div>
@@ -271,7 +271,7 @@
             <div> @ INSEES</div>
             <div> NIT</div>
             <div> SILCHAR<span> | </span></div>
-            <!-- ////// -->
+
             <div> Associate</div>
             <div> Technical</div>
             <div> Team</div>
@@ -279,13 +279,13 @@
             <div> @ E-CELL</div>
             <div> NIT</div>
             <div> SILCHAR<span> | </span></div>
-            <!-- ////// -->
+
             <div "> Executive</div>
             <div> Member</div>
             <div> @ INSEES</div>
             <div> NIT</div>
             <div> SILCHAR<span> | </span></div>
-            <!-- ////// -->
+
             <div> Associate</div>
             <div> Technical</div>
             <div> Team</div>
