Update and rename myport.html to index.html

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <span2>My name is<br> </span2>Do<span>neela</span> Das
         </div>
         <div class="homepic">
-            <img src="pictures/doneela2.jpg" alt="">
+            <img src="./doneela2.jpg" alt="">
         </div>
         <div class="navbar">
             <a href="#home">
@@ -46,7 +46,7 @@
         </div>
         <div class="mypic ">
             <div class="details ">
-                <figure><img src="pictures/Doneela.jpeg " alt=" ">
+                <figure><img src="./Doneela.jpeg " alt=" ">
                     <div class="social-icons ">
                         <a href="https://www.linkedin.com/in/doneela-das-651236204/ " target="blank ">
                             <svg class="icon linkdin " viewBox="0 0 32 32 " fill="none " xmlns="http://www.w3.org/2000/svg ">
