--- a/index.html
+++ b/index.html
@@ -11,14 +11,42 @@
 </head>
 
 <body>
+
     <div class="homepage section" id="home">
         <div class="myname">
             <span1>Holla, Visitors!!<br> </span1>
             <span2>My name is<br> </span2>Do<span>neela</span> Das
+            <a href="#about">
+                <button>
+                    <span3 class="btn-inner">
+                      <span4 class="btn-text">My Resume<span4>
+                      </span3>
+                </button>
+            </a>
+
         </div>
-        <div class="homepic">
-            <img src="./doneela2.jpg" alt="">
+        <div class="homeouter">
+            <div class="homepic">
+                <img src="./doneela2.jpg" alt="">
+            </div>
         </div>
+        <a class="mouse_scroll" href="#about">
+
+
+            <div class="mouse">
+                <div class="wheel"></div>
+            </div>
+            <div>
+                <span class="m_scroll_arrows unu"></span>
+                <span class="m_scroll_arrows doi"></span>
+                <span class="m_scroll_arrows trei"></span>
+            </div>
+
+        </a>
+
+
+
+
         <div class="navbar">
             <a href="#home">
                 <lottie-player class="icon one" src="https://assets7.lottiefiles.com/private_files/lf30_acah1toy.json" background="transparent" speed="1" loop autoplay></lottie-player>
@@ -32,7 +60,7 @@
             <a href="#projects">
                 <lottie-player class="icon four" src=" https://assets9.lottiefiles.com/packages/lf20_LJ1evt.json " background="transparent " speed="1 " loop autoplay></lottie-player>
             </a>
-            <a href="#">
+            <a href="#footer">
                 <lottie-player class="icon five" src=" https://assets6.lottiefiles.com/private_files/lf30_CYOuEI.json " background="transparent " speed="1 " loop autoplay></lottie-player>
             </a>
         </div>
@@ -87,26 +115,251 @@
                     <div>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit praesentium aliquam obcaecati, mollitia eius et. Amet deserunt sequi eos numquam voluptatum perspiciatis, sapiente, ipsum esse voluptatibus quidem corporis. Laboriosam,
                         assumenda.
                     </div>
+                    <a href="#" class="button-primary w-button">More about me</a>
                 </div>
             </div>
         </div>
+        <a class="mouse_scroll" href="#skills">
+
+
+            <div class="mouse">
+                <div class="wheel"></div>
+            </div>
+            <div>
+                <span class="m_scroll_arrows unu"></span>
+                <span class="m_scroll_arrows doi"></span>
+                <span class="m_scroll_arrows trei"></span>
+            </div>
+
+        </a>
     </div>
     <div class="skillpage section" id="skills">
         <div class="skills ">
-            <div class="skill 1 "></div>
+            <div class="myskill ">
+                <div>My&nbsp;</div><span>Skills</span>
+            </div>
+            <div class="services-main-wrapper">
+                <div class="_2-column-grid services-grid">
+                    <div class="card service-card" data-w-id="f26e9ff2-30d1-efc9-7625-a9b1bf2a5c06" style="transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); opacity: 1; transform-style: preserve-3d;" class="card service-card">
+                        <lottie-player class="image service-icon" src="https://assets1.lottiefiles.com/packages/lf20_fuxptv8k.json" background="transparent" speed="1" style="width: 300px; height: 300px;" loop autoplay></lottie-player>
+                        <div class="skill_text">
+                            <h3 class="title service-title">Html-Css-Js</h3>
+                            <p class="paragraph service-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut iaculis viverra mollis nisl dole dolorili tincidunt. Integer eget vitae id tortor.</p>
+                        </div>
+                    </div>
+                    <div class="card service-card" data-w-id="0b584023-c6e7-c8f5-aae2-54d5d8072e5a" style="transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); opacity: 1; transform-style: preserve-3d;" class="card service-card">
+                        <lottie-player class="image service-icon" src="https://assets9.lottiefiles.com/packages/lf20_xx5oa49z.json" background="transparent" speed="1" style="width: 300px; height: 300px;" loop autoplay></lottie-player>
+                        <div class="skill_text">
+                            <h3 class="title service-title">Figma Designing</h3>
+                            <p class="paragraph service-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut iaculis viverra mollis nisl dole dolorili tincidunt. Integer eget vitae id tortor.</p>
+                        </div>
+                    </div>
+                    <div class="card service-card" data-w-id="679e070c-ebf8-e913-cb5b-a9c521d0a708" style="transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); opacity: 1; transform-style: preserve-3d;" class="card service-card">
+                        <lottie-player class="image service-icon" src="https://assets10.lottiefiles.com/packages/lf20_ipzmqnqg.json" background="transparent" speed="1" style="width: 300px; height: 300px;" loop autoplay></lottie-player>
+                        <div class="skill_text">
+                            <h3 class="title service-title">Node Js</h3>
+                            <p class="paragraph service-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut iaculis viverra mollis nisl dole dolorili tincidunt. Integer eget vitae id tortor.</p>
+                        </div>
+                    </div>
+                    <div class="card service-card" data-w-id="371c426b-9338-e482-b26d-bf27e4abebe6" style="transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); opacity: 1; transform-style: preserve-3d;">
+                        <lottie-player class="image service-icon" src="https://assets1.lottiefiles.com/packages/lf20_b23ll34c.json" background="transparent" speed="1" style="width: 300px; height: 300px;" loop autoplay></lottie-player>
+                        <div class="skill_text">
+                            <h3 class="title service-title">React</h3>
+                            <p class="paragraph service-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut iaculis viverra mollis nisl dole dolorili tincidunt. Integer eget vitae id tortor.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="bg services-square"></div>
+            </div>
         </div>
-        <div class="myskill ">
-            <div>My&nbsp;</div><span>Skills</span>
-        </div>
+
     </div>
     <div class="projectpage section" id="projects">
 
         <div class="myproject">
             <div>My&nbsp;</div><span>Projects</span>
         </div>
+        <div class="projects">
+            <div class="project 1">
+                <div class="projectpic 1">
+                    <img src="./pic1.jpeg " alt="">
+                </div>
+                <div class="projectdetails 1">
+                    <div class="projectheadline">Animated Globe</div>
+                    <div class="projectext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium facere in id! Harum iusto aliquid assumenda modi porro sit labore.
+                    </div>
+                    <a target="blank" href="https://doneela.github.io/Rotating_Globe/">
+                        <button>
+                            <span3 class="btn-inner">
+                              <span4 class="btn-text">View<span4>
+                              </span3>
+                            </a>
+                        </button>
+                    </a>
+
+
+                </div>
+            </div>
+            <div class="project 2" id="two">
+
+                <div class="projectdetails 2">
+                    <div class="projectheadline">Date And Time</div>
+                    <div class="projectext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium facere in id! Harum iusto aliquid assumenda modi porro sit labore.
+                    </div>
+                    <a target="blank" href="https://vigorous-montalcini-79bc9f.netlify.app/">
+                        <button>
+                            <span3 class="btn-inner">
+                              <span4 class="btn-text">View<span4>
+                              </span3>
+                        </button>
+                    </a>
+
+
+                </div>
+                <div class="projectpic 2">
+                    <img src="./pic2.jpeg " alt="">
+                </div>
+            </div>
+            <div class="project 3">
+                <div class="projectpic 3">
+                    <img src="./pic3.jpeg " alt="">
+                </div>
+                <div class="projectdetails 3">
+                    <div class="projectheadline">E-Cell Website</div>
+                    <div class="projectext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium facere in id! Harum iusto aliquid assumenda modi porro sit labore.
+                    </div>
+                    <a target="blank" href="https://srijan-nits.in/">
+                        <button>
+                            <span3 class="btn-inner">
+                              <span4 class="btn-text">View<span4>
+                              </span3>
+                        </button>
+                    </a>
+
+
+                </div>
+            </div>
+            <div class="project 4" id="two">
+
+                <div class="projectdetails 4">
+                    <div class="projectheadline">Srijan 2022</div>
+                    <div class="projectext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium facere in id! Harum iusto aliquid assumenda modi porro sit labore.
+                    </div>
+                    <a target="blank" href="https://ecellnits.herokuapp.com/">
+                        <button>
+                            <span3 class="btn-inner">
+                              <span4 class="btn-text">View<span4>
+                              </span3>
+                        </button>
+                    </a>
+                </div>
+                <div class="projectpic 4">
+                    <img src="./pic4.jpeg " alt="">
+                </div>
+            </div>
+        </div>
     </div>
 
-    <script src="portfolio.js "></script>
+    <div class="horizontal-scroll" id="container">
+        <div class="myresponsibility">
+            <div>Positions of&nbsp;</div><span>Responsibility</span>
+        </div>
+
+        <div class="Societies">
+            <div class="responsibility"> Executive</div>
+            <div> Member</div>
+            <div> @ INSEES</div>
+            <div> NIT</div>
+            <div> SILCHAR<span> | </span></div>
+            <!-- ////// -->
+            <div> Associate</div>
+            <div> Technical</div>
+            <div> Team</div>
+            <div> Member</div>
+            <div> @ E-CELL</div>
+            <div> NIT</div>
+            <div> SILCHAR<span> | </span></div>
+            <!-- ////// -->
+            <div "> Executive</div>
+            <div> Member</div>
+            <div> @ INSEES</div>
+            <div> NIT</div>
+            <div> SILCHAR<span> | </span></div>
+            <!-- ////// -->
+            <div> Associate</div>
+            <div> Technical</div>
+            <div> Team</div>
+            <div> Member</div>
+            <div> @ E-CELL</div>
+            <div> NIT</div>
+            <div> SILCHAR<span> | </span></div>
+        </div>
+    </div>
+
+    <div class="footerpage section " id="footer ">
+        <div class="mycontacts ">
+            <div class="name ">Doneela</div>
+            <div class="myself ">Lorem ipsum dolor sit amet, consectetur <br>adipisicing elit. Eligendi alias explicabo laborum<br> culpa iure magnam, aperiam.</div>
+            <div class="social-contacts ">
+                <a href="https://www.facebook.com/doneela.das.71/ " target="blank ">
+                    <svg class="icon facebook " viewBox="0 0 17 30 " fill="none " xmlns="http://www.w3.org/2000/svg ">
+                                <path d="M16.0002 1.66663H12.0002C10.2321 1.66663 8.53636 2.369 7.28612 3.61925C6.03588 4.86949 5.3335 6.56518 5.3335 8.33329V12.3333H1.3335V17.6666H5.3335V28.3333H10.6668V17.6666H14.6668L16.0002 12.3333H10.6668V8.33329C10.6668
+                7.97967 10.8073 7.64053 11.0574 7.39048C11.3074 7.14044 11.6465 6.99996 12.0002 6.99996H16.0002V1.66663Z " stroke="white " stroke-width="2 " stroke-linecap="round " stroke-linejoin="round "/>
+                            </svg>
+                </a>
+                <a class="icon instagram " href="https://www.instagram.com/doneela_das// " target="_blank ">
+                    <svg xmlns="http://www.w3.org/2000/svg " fill="white " viewBox="0 0 448 512 "><path d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7
+                74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9
+                0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8
+                19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6
+                42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z "/>
+                    </svg>
+                </a>
+
+                <a href="https://www.linkedin.com/in/doneela-das-651236204/ " target="blank ">
+                    <svg class="icon linkdin " viewBox="0 0 32 32 " fill="none " xmlns="http://www.w3.org/2000/svg ">
+                        <path d="M21.3335 10.6666C23.4552 10.6666 25.4901 11.5095 26.9904 13.0098C28.4906 14.5101 29.3335 16.5449 29.3335 18.6666V28H24.0002V18.6666C24.0002 17.9594 23.7192 17.2811 23.2191 16.781C22.719 16.2809 22.0407 16 21.3335 16C20.6263
+                16 19.948 16.2809 19.4479 16.781C18.9478 17.2811 18.6668 17.9594 18.6668 18.6666V28H13.3335V18.6666C13.3335 16.5449 14.1764 14.5101 15.6766 13.0098C17.1769 11.5095 19.2118 10.6666 21.3335 10.6666V10.6666Z " stroke="white " stroke-width="2
+                " stroke-linecap="round " stroke-linejoin="round "/>
+                        <path d="M7.99984 12H2.6665V28H7.99984V12Z " stroke="white " stroke-width="2 " stroke-linecap="round " stroke-linejoin="round "/>
+                        <path d="M5.33317 7.99996C6.80593 7.99996 7.99984 6.80605 7.99984 5.33329C7.99984 3.86053 6.80593 2.66663 5.33317 2.66663C3.86041 2.66663 2.6665 3.86053 2.6665 5.33329C2.6665 6.80605 3.86041 7.99996 5.33317 7.99996Z
+                " stroke="white " stroke-width="2 " stroke-linecap="round " stroke-linejoin="round "/>
+                    </svg>
+                </a>
+                <a href="https://github.com/doneela " target="blank ">
+                    <svg class="icon instagram " fill="white " xmlns="http://www.w3.org/2000/svg " viewBox="0 0 496 512 ">
+                        <path d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3.3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5.3-6.2 2.3zm44.2-1.7c-2.9.7-4.9 2.6-4.6 4.9.3
+                2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4
+                0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27
+                13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3.7
+                5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3.3 2.9 2.3 3.9 1.6 1 3.6.7 4.3-.7.7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3.7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3.7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6
+                1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z "/>
+                    </svg>
+                </a>
+            </div>
+
+        </div>
+        <div class="myaddress ">
+            <div class="name ">Contact Me</div>
+            <div class="myself ">
+                <a target="blank " href="mailto:doneeladas@gmail.com " class="contact-link-wrapper w-inline-block ">
+                
+                <svg fill="white " class="icon instagram " xmlns="http://www.w3.org/2000/svg " viewBox="0 0 512 512 "><path d="M0 128C0 92.65 28.65 64 64 64H448C483.3 64 512 92.65 512 128V384C512 419.3 483.3 448 448 448H64C28.65 448 0 419.3 0 384V128zM48
+                128V150.1L220.5 291.7C241.1 308.7 270.9 308.7 291.5 291.7L464 150.1V127.1C464 119.2 456.8 111.1 448 111.1H64C55.16 111.1 48 119.2 48 127.1L48 128zM48 212.2V384C48 392.8 55.16 400 64 400H448C456.8 400 464 392.8 464 384V212.2L322 328.8C283.6
+                360.3 228.4 360.3 189.1 328.8L48 212.2z "/></svg>
+                <div class="text ">doneeladas@gmail.com</div>
+                </a>
+                <a target="blank " href="tel:(+91)7002881744 " class="contact-link-wrapper w-inline-block ">
+                    <svg fill="white " class="icon instagram " xmlns="http://www.w3.org/2000/svg " viewBox="0 0 512 512 "><path d="M511.2 387l-23.25 100.8c-3.266 14.25-15.79 24.22-30.46 24.22C205.2 512 0 306.8 0 54.5c0-14.66 9.969-27.2 24.22-30.45l100.8-23.25C139.7-2.602
+                154.7 5.018 160.8 18.92l46.52 108.5c5.438 12.78 1.77 27.67-8.98 36.45L144.5 207.1c33.98 69.22 90.26 125.5 159.5 159.5l44.08-53.8c8.688-10.78 23.69-14.51 36.47-8.975l108.5 46.51C506.1 357.2 514.6 372.4 511.2 387z "/></svg>
+                    <div class="text ">(+91) 7002881744</div>
+                </a>
+            </div>
+        </div>
+
+    </div>
+
+    <script src=" portfolio.js "></script>
 
 </body>
 
